--- a/www/css/screens/index.css
+++ b/www/css/screens/index.css
@@ -27,7 +27,11 @@
     width: 100%;
     height: 300px;
 }
-
+.image3{
+    margin-top: 20%;
+    width: 100%;
+    height: 300px;  
+}
 .container{
     font-family: 'Poppins';
     height: 280px;
@@ -47,4 +51,42 @@
     font-size: 1.7rem;
     background-color: #55847A;
     text-transform: none;
+}
+
+.container-page2{
+    margin-top: 200px;
+    font-family: 'Poppins';
+    height: 280px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#submit{
+    margin-top: 20px;
+    padding: 12px;
+    font-size: 1.2rem;
+    background-color: #55847A;
+    text-transform: none;
+}
+
+
+.signIn{
+    color: #55847A;
+}
+.signUp{
+    color: #55847A;
+}
+
+.container-page3{
+    margin-top: 68px;
+    font-family: 'Poppins';
+    height: 280px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
