--- a/www/css/screens/index.css
+++ b/www/css/screens/index.css
@@ -1,38 +1,43 @@
-
-.sup-1{
+/* GENERAL */
+.sup-1 {
     top: -30px;
     left: 20px;
     border-radius: 50%;
-    background-color: #55847A;
+    background-color: #6a9aa5;
     width: 130px;
     height: 130px;
     position: absolute;
 }
 
-.sup-2{
+.sup-2 {
     top: -10px;
     left: -40px;
     border-radius: 50%;
-    background-color: #91c4b9;
+    background-color: #5e797f;
     width: 130px;
     height: 130px;
     position: absolute;
 }
 
-.superior{
+.superior {
     position: relative;
 }
-.image{
+
+/* *********************/
+.image {
+    height: 100%;
+}
+
+.container-image {
+    display: flex;
+    justify-content: center;
     margin-top: 40%;
+    height: 30%;
     width: 100%;
-    height: 300px;
+    ;
 }
-.image3{
-    margin-top: 20%;
-    width: 100%;
-    height: 300px;  
-}
-.container{
+
+.container {
     font-family: 'Poppins';
     height: 280px;
     padding: 10px 20px;
@@ -42,18 +47,18 @@
     justify-content: space-between;
 }
 
-.container p{
+.container p {
     text-align: center;
 }
 
-#push-button{
+#push-button {
     padding: 12px;
     font-size: 1.7rem;
-    background-color: #55847A;
+    background-color: #244f58;
     text-transform: none;
 }
 
-.container-page2{
+.container-page2 {
     margin-top: 200px;
     font-family: 'Poppins';
     height: 280px;
@@ -64,23 +69,47 @@
     justify-content: space-between;
 }
 
-#submit{
+#submit {
     margin-top: 20px;
     padding: 12px;
     font-size: 1.2rem;
-    background-color: #55847A;
+    background-color: #244f58;
+    text-transform: none;
+}
+
+#submitSignIn {
+    margin-top: 20px;
+    padding: 12px;
+    font-size: 1.2rem;
+    background-color: #244f58;
+    text-transform: none;
+}
+
+.saveNotes{
+    padding: 12px;
+    font-size: 1.2rem;
+    background-color: #244f58;
+    text-transform: none;
+}
+
+.pushMyNotes{
+    padding: 12px;
+    font-size: 1.2rem;
+    background-color: #244f58;
     text-transform: none;
 }
 
 
-.signIn{
-    color: #55847A;
-}
-.signUp{
-    color: #55847A;
+
+.signIn {
+    color: #244f58;
 }
 
-.container-page3{
+.signUp {
+    color: #244f58;
+}
+
+.container-page3 {
     margin-top: 68px;
     font-family: 'Poppins';
     height: 280px;
@@ -90,3 +119,56 @@
     align-items: center;
     justify-content: space-between;
 }
+
+
+
+/* pagina 4 */
+.container-page4 {
+    margin-top: 68px;
+    display: flex;
+    height: 80%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.container-image3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.image3 {
+    height: 200px;
+}
+
+.form-task {
+    border-radius: 10px;
+    border: 2px solid black;
+    padding: 5%;
+    width: 80%;
+    height: 40%;
+    background-color: #6a9aa5;
+}
+
+.fields {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.option {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+    width: 40%;
+}
+.form-buttons{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 8%;
+}
+
+/* *************/
