--- a/www/css/screens/index.css
+++ b/www/css/screens/index.css
@@ -205,3 +205,12 @@
 #map {
     height: 40%;
 }
+
+.notesList{
+    padding: 1%;
+    margin: 30px 10px;
+    
+}
+#reminderUpdate{
+    padding-bottom: 10%;
+}
